# wedding-gallery-api

./: .gitignore  Dockerfile  Dockerfile.prod  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  start.sh
.devcontainer/: devcontainer.json
wedding_gallery/: asgi.py  settings.py  urls.py  wsgi.py
wedding_gallery/apps/authentication/: urls.py  views.py
wedding_gallery/apps/common/: models.py
wedding_gallery/apps/core/: admin.py  models.py  serializers.py  urls.py  views.py
wedding_gallery/apps/core/migrations/: 0001_initial.py
